Disable compact object headers for JDK 25+ (#2042)